...
                        .font(.title)
                    Spacer()
                    Button("Log Out") {
                        loginViewModel.isAuthenticated = false
                    }
                    .foregroundColor(.white)
                    .accessibilityIdentifier("LogOutButton")
                }
                .padding()
                .background(Color.customPink)
                
                // Content
                ScrollView {
...
